--- a/housing.ipynb
+++ b/housing.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:10.620174800Z",
-     "start_time": "2023-10-26T19:19:10.040873800Z"
+     "end_time": "2023-12-12T15:48:34.911952200Z",
+     "start_time": "2023-12-12T15:48:34.316426500Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:11.692460600Z",
-     "start_time": "2023-10-26T19:19:10.080766200Z"
+     "end_time": "2023-12-12T15:48:35.007695200Z",
+     "start_time": "2023-12-12T15:48:34.355322900Z"
     }
    },
    "id": "f4e76e2480f5b2b4"
@@ -73,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:21.268933900Z",
-     "start_time": "2023-10-26T19:19:10.195458800Z"
+     "end_time": "2023-12-12T15:48:45.498870700Z",
+     "start_time": "2023-12-12T15:48:34.966805400Z"
     }
    },
    "id": "a87ccb72fb27f6e4"
@@ -100,8 +100,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:21.856726100Z",
-     "start_time": "2023-10-26T19:19:21.275914700Z"
+     "end_time": "2023-12-12T15:48:45.739235700Z",
+     "start_time": "2023-12-12T15:48:45.503859100Z"
     }
    },
    "id": "98d3a8c13e91f75a"
@@ -129,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:38.030592600Z",
-     "start_time": "2023-10-26T19:19:21.858720400Z"
+     "end_time": "2023-12-12T15:48:54.472542400Z",
+     "start_time": "2023-12-12T15:48:45.743226500Z"
     }
    },
    "id": "2185ea1eb31f7f3d"
@@ -153,8 +153,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:39.071566100Z",
-     "start_time": "2023-10-26T19:19:38.020620Z"
+     "end_time": "2023-12-12T15:48:54.491491100Z",
+     "start_time": "2023-12-12T15:48:54.474537200Z"
     }
    },
    "id": "4b15e902383c6d0"
@@ -179,8 +179,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:39.074548200Z",
-     "start_time": "2023-10-26T19:19:38.135841900Z"
+     "end_time": "2023-12-12T15:48:55.299543600Z",
+     "start_time": "2023-12-12T15:48:54.490494700Z"
     }
    },
    "id": "a924e83ffea2afc7"
@@ -204,8 +204,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:39.075545900Z",
-     "start_time": "2023-10-26T19:19:38.273100800Z"
+     "end_time": "2023-12-12T15:48:55.300542Z",
+     "start_time": "2023-12-12T15:48:54.566566600Z"
     }
    },
    "id": "29d487dbb5607d73"
@@ -227,8 +227,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:39.076545700Z",
-     "start_time": "2023-10-26T19:19:38.347467800Z"
+     "end_time": "2023-12-12T15:48:55.300542Z",
+     "start_time": "2023-12-12T15:48:54.579531900Z"
     }
    },
    "id": "1f00a46e143ed7ec"
@@ -253,8 +253,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:39.111587400Z",
-     "start_time": "2023-10-26T19:19:38.376390200Z"
+     "end_time": "2023-12-12T15:48:55.302536400Z",
+     "start_time": "2023-12-12T15:48:54.593494600Z"
     }
    },
    "id": "685d3e453b60d0ae"
@@ -286,8 +286,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:40.272529700Z",
-     "start_time": "2023-10-26T19:19:38.470139800Z"
+     "end_time": "2023-12-12T15:48:55.339438500Z",
+     "start_time": "2023-12-12T15:48:54.630397300Z"
     }
    },
    "id": "8ec86ef39c7cb18f"
@@ -303,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:40.373774400Z",
-     "start_time": "2023-10-26T19:19:40.242103300Z"
+     "end_time": "2023-12-12T15:48:55.339438500Z",
+     "start_time": "2023-12-12T15:48:54.941838100Z"
     }
    },
    "id": "563da6f195e730bd"
@@ -320,8 +320,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:40.482001Z",
-     "start_time": "2023-10-26T19:19:40.350832100Z"
+     "end_time": "2023-12-12T15:48:55.340435Z",
+     "start_time": "2023-12-12T15:48:54.989219800Z"
     }
    },
    "id": "4c0360bf513f169d"
@@ -353,8 +353,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:41.354268300Z",
-     "start_time": "2023-10-26T19:19:40.449085300Z"
+     "end_time": "2023-12-12T15:48:55.607233200Z",
+     "start_time": "2023-12-12T15:48:55.042077100Z"
     }
    },
    "id": "d1da888a74c05de4"
@@ -371,8 +371,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:41.504890900Z",
-     "start_time": "2023-10-26T19:19:41.252540800Z"
+     "end_time": "2023-12-12T15:48:55.663594Z",
+     "start_time": "2023-12-12T15:48:55.413749700Z"
     }
    },
    "id": "7ab2c35de4839ec8"
@@ -404,8 +404,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:19:42.851138900Z",
-     "start_time": "2023-10-26T19:19:41.455508600Z"
+     "end_time": "2023-12-12T15:48:55.994373900Z",
+     "start_time": "2023-12-12T15:48:55.593269600Z"
     }
    },
    "id": "fd1c49935ba0eea7"
@@ -424,8 +424,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:07.780732600Z",
-     "start_time": "2023-10-26T19:19:42.834674Z"
+     "end_time": "2023-12-12T15:49:10.280442900Z",
+     "start_time": "2023-12-12T15:48:55.993377400Z"
     }
    },
    "id": "ef8669c2d77955f5"
@@ -449,8 +449,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:07.939310300Z",
-     "start_time": "2023-10-26T19:20:07.791704100Z"
+     "end_time": "2023-12-12T15:49:10.321333200Z",
+     "start_time": "2023-12-12T15:49:10.281440300Z"
     }
    },
    "id": "799b5bf647f80f13"
@@ -466,8 +466,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:08.127804700Z",
-     "start_time": "2023-10-26T19:20:07.929335700Z"
+     "end_time": "2023-12-12T15:49:10.393141900Z",
+     "start_time": "2023-12-12T15:49:10.307370400Z"
     }
    },
    "id": "3b4740a15e70039f"
@@ -482,8 +482,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:08.195624200Z",
-     "start_time": "2023-10-26T19:20:08.124812600Z"
+     "end_time": "2023-12-12T15:49:10.413088Z",
+     "start_time": "2023-12-12T15:49:10.390149Z"
     }
    },
    "id": "c766d83763ea5133"
@@ -515,8 +515,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:09.137506200Z",
-     "start_time": "2023-10-26T19:20:08.159719300Z"
+     "end_time": "2023-12-12T15:49:10.962485500Z",
+     "start_time": "2023-12-12T15:49:10.422066100Z"
     }
    },
    "id": "65fa8db6230c9e39"
@@ -527,7 +527,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.legend.Legend at 0x2052d4a66b0>"
+      "text/plain": "<matplotlib.legend.Legend at 0x153eebbce50>"
      },
      "execution_count": 22,
      "metadata": {},
@@ -552,8 +552,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:11.692195200Z",
-     "start_time": "2023-10-26T19:20:09.132517500Z"
+     "end_time": "2023-12-12T15:49:12.200503800Z",
+     "start_time": "2023-12-12T15:49:10.954506500Z"
     }
    },
    "id": "7ad2c5a9054b360d"
@@ -573,8 +573,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:11.846019100Z",
-     "start_time": "2023-10-26T19:20:11.694190Z"
+     "end_time": "2023-12-12T15:49:12.348510700Z",
+     "start_time": "2023-12-12T15:49:12.202499Z"
     }
    },
    "id": "ea7158cc8a7fd8d3"
@@ -598,8 +598,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:11.848021200Z",
-     "start_time": "2023-10-26T19:20:11.822082500Z"
+     "end_time": "2023-12-12T15:49:12.348510700Z",
+     "start_time": "2023-12-12T15:49:12.326014600Z"
     }
    },
    "id": "524a0ce04ff52c54"
@@ -634,8 +634,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:26.062921500Z",
-     "start_time": "2023-10-26T19:20:11.843038Z"
+     "end_time": "2023-12-12T15:49:20.779434600Z",
+     "start_time": "2023-12-12T15:49:12.337519500Z"
     }
    },
    "id": "ee1067cb7b002bad"
@@ -668,8 +668,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:27.738766800Z",
-     "start_time": "2023-10-26T19:20:26.062921500Z"
+     "end_time": "2023-12-12T15:49:21.817201100Z",
+     "start_time": "2023-12-12T15:49:20.778438100Z"
     }
    },
    "id": "c9f54f95710208a3"
@@ -686,8 +686,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:27.843483100Z",
-     "start_time": "2023-10-26T19:20:27.737767Z"
+     "end_time": "2023-12-12T15:49:21.914937300Z",
+     "start_time": "2023-12-12T15:49:21.810217900Z"
     }
    },
    "id": "5a380afb91bca2ac"
@@ -717,8 +717,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:27.867419300Z",
-     "start_time": "2023-10-26T19:20:27.770679800Z"
+     "end_time": "2023-12-12T15:49:21.915935Z",
+     "start_time": "2023-12-12T15:49:21.839140500Z"
     }
    },
    "id": "a23b76829e81e375"
@@ -734,8 +734,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:27.939738800Z",
-     "start_time": "2023-10-26T19:20:27.885882800Z"
+     "end_time": "2023-12-12T15:49:21.916932400Z",
+     "start_time": "2023-12-12T15:49:21.901972200Z"
     }
    },
    "id": "6b1db207b83d9084"
@@ -760,8 +760,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:28.053561900Z",
-     "start_time": "2023-10-26T19:20:27.931759300Z"
+     "end_time": "2023-12-12T15:49:22.001705100Z",
+     "start_time": "2023-12-12T15:49:21.915935Z"
     }
    },
    "id": "888ac45e940ba31b"
@@ -789,8 +789,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:31.543048Z",
-     "start_time": "2023-10-26T19:20:28.057551500Z"
+     "end_time": "2023-12-12T15:49:23.195534400Z",
+     "start_time": "2023-12-12T15:49:21.998713Z"
     }
    },
    "id": "cbc612cbd63777c9"
@@ -814,8 +814,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:31.649760900Z",
-     "start_time": "2023-10-26T19:20:31.543048Z"
+     "end_time": "2023-12-12T15:49:23.241412100Z",
+     "start_time": "2023-12-12T15:49:23.201518700Z"
     }
    },
    "id": "2a4fb9767c343f9d"
@@ -839,8 +839,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:31.814863400Z",
-     "start_time": "2023-10-26T19:20:31.576955100Z"
+     "end_time": "2023-12-12T15:49:23.327183800Z",
+     "start_time": "2023-12-12T15:49:23.247397300Z"
     }
    },
    "id": "c20ee2b76412dffd"
@@ -855,8 +855,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:31.816856900Z",
-     "start_time": "2023-10-26T19:20:31.772975500Z"
+     "end_time": "2023-12-12T15:49:23.380041600Z",
+     "start_time": "2023-12-12T15:49:23.332171100Z"
     }
    },
    "id": "7f7dcba5fc584267"
@@ -882,8 +882,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:31.882742500Z",
-     "start_time": "2023-10-26T19:20:31.807883600Z"
+     "end_time": "2023-12-12T15:49:23.400986500Z",
+     "start_time": "2023-12-12T15:49:23.369073300Z"
     }
    },
    "id": "99a0e08aebbf4bcc"
@@ -910,8 +910,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:31.974497500Z",
-     "start_time": "2023-10-26T19:20:31.859260300Z"
+     "end_time": "2023-12-12T15:49:23.459830Z",
+     "start_time": "2023-12-12T15:49:23.401983400Z"
     }
    },
    "id": "3afb5de8da3b61a"
@@ -938,8 +938,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:32.052289400Z",
-     "start_time": "2023-10-26T19:20:31.910667900Z"
+     "end_time": "2023-12-12T15:49:23.660292200Z",
+     "start_time": "2023-12-12T15:49:23.438886600Z"
     }
    },
    "id": "14b5cba14db0fcfc"
@@ -973,8 +973,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:32.491622600Z",
-     "start_time": "2023-10-26T19:20:31.959537100Z"
+     "end_time": "2023-12-12T15:49:23.748059Z",
+     "start_time": "2023-12-12T15:49:23.486757100Z"
     }
    },
    "id": "2b64ea16d965ea9c"
@@ -997,8 +997,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:32.518550500Z",
-     "start_time": "2023-10-26T19:20:32.041318100Z"
+     "end_time": "2023-12-12T15:49:23.748059Z",
+     "start_time": "2023-12-12T15:49:23.542606500Z"
     }
    },
    "id": "1a755308dd161071"
@@ -1022,8 +1022,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:33.111010900Z",
-     "start_time": "2023-10-26T19:20:32.271702300Z"
+     "end_time": "2023-12-12T15:49:23.837820600Z",
+     "start_time": "2023-12-12T15:49:23.632367300Z"
     }
    },
    "id": "1df5ff1e7234a2a2"
@@ -1043,7 +1043,7 @@
     }
    ],
    "source": [
-    "#Now we will train our data with Machine Learning model \"Linear Regression\"\n",
+    "#Now we will train our data with Machine Learning model \"Linear Regression\" first model we are trying\n",
     "from sklearn.linear_model import LinearRegression\n",
     "lin_reg = LinearRegression()\n",
     "lin_reg.fit(housing_prepared, housing_labels)\n",
@@ -1056,8 +1056,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:33.393768300Z",
-     "start_time": "2023-10-26T19:20:33.115000700Z"
+     "end_time": "2023-12-12T15:49:23.999389800Z",
+     "start_time": "2023-12-12T15:49:23.822857500Z"
     }
    },
    "id": "d2aa0e38a38d920d"
@@ -1086,8 +1086,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:33.490021500Z",
-     "start_time": "2023-10-26T19:20:33.370829600Z"
+     "end_time": "2023-12-12T15:49:24.078802700Z",
+     "start_time": "2023-12-12T15:49:24.000384700Z"
     }
    },
    "id": "5997c8c54554e2ee"
@@ -1106,7 +1106,7 @@
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor # Second model we are trying\n",
     "\n",
     "tree_reg = DecisionTreeRegressor()\n",
     "tree_reg.fit(housing_prepared, housing_labels)\n",
@@ -1119,8 +1119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:35.624179Z",
-     "start_time": "2023-10-26T19:20:33.466087Z"
+     "end_time": "2023-12-12T15:49:25.115422100Z",
+     "start_time": "2023-12-12T15:49:24.012351900Z"
     }
    },
    "id": "5402abd4f2d22744"
@@ -1138,8 +1138,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:47.921637400Z",
-     "start_time": "2023-10-26T19:20:35.596254900Z"
+     "end_time": "2023-12-12T15:49:32.741296600Z",
+     "start_time": "2023-12-12T15:49:25.111433800Z"
     }
    },
    "id": "c27479f3eba9e18a"
@@ -1152,11 +1152,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores:  [72983.02174642 70178.60526605 69296.64067883 71621.63310629\n",
-      " 67308.93354335 78191.19960479 71303.02299334 72850.02259551\n",
-      " 68641.26029539 71689.28722625]\n",
-      "Mean:  71406.36270562143\n",
-      "Standard deviation:  2848.405141872622\n"
+      "Scores:  [72624.48978483 70246.76247211 68366.32128686 70953.63507438\n",
+      " 69229.83142558 75748.60014654 70839.58123605 74106.68069562\n",
+      " 68461.71628914 72869.33837535]\n",
+      "Mean:  71344.69567864726\n",
+      "Standard deviation:  2329.244628895476\n"
      ]
     }
    ],
@@ -1171,25 +1171,77 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:48.005413100Z",
-     "start_time": "2023-10-26T19:20:47.929618700Z"
+     "end_time": "2023-12-12T15:49:32.771205200Z",
+     "start_time": "2023-12-12T15:49:32.746274100Z"
     }
    },
    "id": "1275d2e1a1072775"
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor #Third model we are trying\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "forest_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "\n",
+    "housing_predictions_forest = forest_reg.predict(housing_prepared)\n",
+    "forest_mse = mean_squared_error(housing_labels, housing_predictions_forest)\n",
+    "forest_rmse = np.sqrt(tree_mse)\n",
+    "forest_rmse\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-12T15:50:33.329501700Z",
+     "start_time": "2023-12-12T15:49:32.762229500Z"
+    }
+   },
+   "id": "95763b23d046c6b6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "forest_scores = cross_val_score(forest_reg, housing_prepared, \n",
+    "                                housing_labels, \n",
+    "                                scoring=\"neg_mean_squared_error\", \n",
+    "                                cv=10\n",
+    "                                )   \n",
+    "forest_rmse_scores = np.sqrt(-forest_scores)\n",
+    "display_scores(forest_rmse)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-12-12T15:50:33.335485600Z"
+    }
+   },
+   "id": "bb06ebb192c197a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-26T19:20:48.067364300Z",
-     "start_time": "2023-10-26T19:20:47.999430200Z"
-    }
+    "is_executing": true
    },
-   "id": "95763b23d046c6b6"
+   "id": "d5bd79c6873df47"
   }
  ],
  "metadata": {
